Overidden default scrollbar and added some styling to fit the theme of the site

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="#">ProBoutique</a>
+            <a class="navbar-brand" href="index.html">PB</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -61,8 +61,38 @@
         </nav>
         <!-- Home Image -->
         <div class="container-fluid home-container">
-            <div class="company-text">
-                <p>ProBoutique</p>
+            <p class="company-text">ProBoutique</p>
+        </div>
+        <div class="container-fluid float-container">
+            <div class="float-child">
+                <div class="green">Float Column 1</div>
+            </div>
+            <div class="float-child">
+                <div class="blue">Float Column 2</div>
+            </div>
+        </div>
+        <div class="container-fluid float-container">
+            <div class="float-child">
+                <div class="green">Float Column 1</div>
+            </div>
+            <div class="float-child">
+                <div class="blue">Float Column 2</div>
+            </div>
+        </div>
+        <div class="container-fluid float-container">
+            <div class="float-child">
+                <div class="green">Float Column 1</div>
+            </div>
+            <div class="float-child">
+                <div class="blue">Float Column 2</div>
+            </div>
+        </div>
+        <div class="container-fluid float-container">
+            <div class="float-child">
+                <div class="green">Float Column 1</div>
+            </div>
+            <div class="float-child">
+                <div class="blue">Float Column 2</div>
             </div>
         </div>
         <!-- Optional JavaScript -->
