Added containers for imagery and text on the index.html file, applied styling for these containers with headers and sub text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Abhaya+Libre&family=Mea+Culpa&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -64,35 +67,41 @@
             <p class="company-text">ProBoutique</p>
         </div>
         <div class="container-fluid float-container">
-            <div class="float-child">
-                <div class="green">Float Column 1</div>
+            <div class="float-child-one">
+                <div class="green">
+                    <div class="container">
+                        <h1 class="container-header text-center">
+                            Bespoke Tayloring
+                        </h1>
+                        <p class="container-text">
+                            We pride our reputation on the fact that we have two of the countries finest bespoke tailors. 
+                            Simon Berchewitscz & Alekxander Sevan work to the highest of standards and with 120 years of 
+                            combined experience between them, they make sure you leave their hands with the best fit 
+                            to satisfy your needs.
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="float-child">
-                <div class="blue">Float Column 2</div>
-            </div>
-        </div>
-        <div class="container-fluid float-container">
-            <div class="float-child">
-                <div class="green">Float Column 1</div>
-            </div>
-            <div class="float-child">
-                <div class="blue">Float Column 2</div>
-            </div>
-        </div>
-        <div class="container-fluid float-container">
-            <div class="float-child">
-                <div class="green">Float Column 1</div>
-            </div>
-            <div class="float-child">
-                <div class="blue">Float Column 2</div>
+            <div class="float-child-two">
             </div>
         </div>
         <div class="container-fluid float-container">
-            <div class="float-child">
-                <div class="green">Float Column 1</div>
+            <div class="float-child-four">
+                <div class="green">
+                </div>
             </div>
-            <div class="float-child">
-                <div class="blue">Float Column 2</div>
+            <div class="float-child-three">
+                <div class="container">
+                    <h1 class="container-header text-center">
+                        The Right Occasion
+                    </h1>
+                    <p class="container-text"> 
+                        Whether it's an important wedding, a formal reunion or even that dream job interview, we want you to make sure 
+                        you look the best. We have a wide selection to choose from and our team is always on standby to help you with 
+                        anything you need. We model our own clothing in store and our staff have vast knowledge of colours, fits and 
+                        coordination so you can get a beter idea of what may or may not suit you.
+                    </p>
+                </div>
             </div>
         </div>
         <!-- Optional JavaScript -->
